// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen-test when login The login form is displayed correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 1334,
        "justifyContent": "center",
        "left": 0,
        "top": 0,
        "width": 750,
      }
    }
  >
    <KeyboardAvoidingView
      behavior="padding"
      enabled={true}
      keyboardVerticalOffset={100}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "height": 400,
            "marginTop": 10,
            "width": 300,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "mont-bold",
                  "fontSize": 40,
                }
              }
            >
              Aracan
            </Text>
          </View>
        </View>
        <MultiLingualTextBox
          autoFocus={false}
          blurOnSubmit={true}
          containerStyle={
            Object {
              "marginVertical": 5,
            }
          }
          errorMessage="正しいメールアドレスを入力してください。"
          inputStyle={
            Object {
              "color": "white",
              "marginLeft": 10,
            }
          }
          keyboardType="email-address"
          leftIcon={
            <Themed.Icon
              color="rgba(171, 189, 219, 1)"
              name="account-box"
              size={25}
              type="material-community"
            />
          }
          localizedPlaceholder="e_mail"
          onChangeText={[Function]}
          onValidation={[Function]}
          placeholderTextColor="white"
          returnKeyType="next"
          testID="accountIdTextBox"
          value=""
        />
        <MultiLingualTextBox
          blurOnSubmit={true}
          containerStyle={
            Object {
              "marginVertical": 10,
            }
          }
          inputStyle={
            Object {
              "color": "white",
              "marginLeft": 10,
            }
          }
          keyboardType="default"
          leftIcon={
            <Themed.Icon
              color="rgba(171, 189, 219, 1)"
              name="lock"
              size={25}
              type="material-community"
            />
          }
          localizedPlaceholder="password"
          onChangeText={[Function]}
          onValidation={[Function]}
          placeholderTextColor="white"
          returnKeyType="done"
          secureTextEntry={true}
          testID="passwordTextBox"
          value=""
        />
        <MultiLingualButton
          buttonStyle={
            Object {
              "borderRadius": 30,
              "height": 40,
              "width": 200,
            }
          }
          containerStyle={
            Object {
              "alignItems": "center",
              "marginVertical": 20,
            }
          }
          disabled={true}
          loading={false}
          loadingProps={
            Object {
              "color": "white",
              "size": "small",
            }
          }
          localizedTitle="login"
          onPress={[Function]}
          testID="loginButton"
          titleStyle={
            Object {
              "fontWeight": "bold",
            }
          }
        />
      </View>
    </KeyboardAvoidingView>
  </ImageBackground>
</View>
`;

exports[`LoginScreen-test when signup The signup form is displayed correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 1334,
        "justifyContent": "center",
        "left": 0,
        "top": 0,
        "width": 750,
      }
    }
  >
    <KeyboardAvoidingView
      behavior="padding"
      enabled={true}
      keyboardVerticalOffset={100}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "height": 400,
            "marginTop": 10,
            "width": 300,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "mont-bold",
                  "fontSize": 40,
                }
              }
            >
              Aracan
            </Text>
          </View>
        </View>
        <MultiLingualTextBox
          autoFocus={false}
          blurOnSubmit={true}
          containerStyle={
            Object {
              "marginVertical": 5,
            }
          }
          errorMessage="正しいメールアドレスを入力してください。"
          inputStyle={
            Object {
              "color": "white",
              "marginLeft": 10,
            }
          }
          keyboardType="email-address"
          leftIcon={
            <Themed.Icon
              color="rgba(171, 189, 219, 1)"
              name="account-box"
              size={25}
              type="material-community"
            />
          }
          localizedPlaceholder="e_mail"
          onChangeText={[Function]}
          onValidation={[Function]}
          placeholderTextColor="white"
          returnKeyType="next"
          testID="accountIdTextBox"
          value=""
        />
        <MultiLingualTextBox
          blurOnSubmit={true}
          containerStyle={
            Object {
              "marginVertical": 10,
            }
          }
          errorMessage="パスワードは8桁以上を入力してください。"
          inputStyle={
            Object {
              "color": "white",
              "marginLeft": 10,
            }
          }
          keyboardType="default"
          leftIcon={
            <Themed.Icon
              color="rgba(171, 189, 219, 1)"
              name="lock"
              size={25}
              type="material-community"
            />
          }
          localizedPlaceholder="password"
          onChangeText={[Function]}
          onValidation={[Function]}
          placeholderTextColor="white"
          returnKeyType="done"
          secureTextEntry={true}
          testID="passwordTextBox"
          value=""
        />
        <MultiLingualTextBox
          blurOnSubmit={true}
          containerStyle={
            Object {
              "marginVertical": 10,
            }
          }
          errorMessage="パスワードと確認用パスワードが一致しません。"
          inputStyle={
            Object {
              "color": "white",
              "marginLeft": 10,
            }
          }
          keyboardType="default"
          leftIcon={
            <Themed.Icon
              color="rgba(171, 189, 219, 1)"
              name="lock"
              size={25}
              type="material-community"
            />
          }
          localizedPlaceholder="password_confirm"
          onChangeText={[Function]}
          onValidation={[Function]}
          placeholderTextColor="white"
          returnKeyType="done"
          secureTextEntry={true}
          testID="passwordConfirmTextBox"
          value=""
        />
        <MultiLingualButton
          buttonStyle={
            Object {
              "borderRadius": 30,
              "height": 40,
              "width": 200,
            }
          }
          containerStyle={
            Object {
              "alignItems": "center",
              "marginVertical": 20,
            }
          }
          disabled={true}
          loading={false}
          loadingProps={
            Object {
              "color": "white",
              "size": "small",
            }
          }
          localizedTitle="create_account"
          onPress={[Function]}
          testID="loginButton"
          titleStyle={
            Object {
              "fontWeight": "bold",
            }
          }
        />
      </View>
    </KeyboardAvoidingView>
  </ImageBackground>
</View>
`;
